some big changes for the about sectione

--- a/index.html
+++ b/index.html
@@ -98,11 +98,6 @@
           </div>
         </div>
       </div>
-      <img
-        src="https://source.unsplash.com/random/480x320"
-        alt=""
-        class="w-5/6 mx-auto mb-12 -mt-20 dark:bg-gray-500 rounded-lg shadow-md lg:-mt-40"
-      />
     </section>
 
     <!--About Me-->
@@ -111,17 +106,26 @@
         <div class="md:w-1/2 space-y-4">
           <h2 class="text-2xl font-bold">About Me</h2>
           <p>
-            Hi, i am a beginner in frontend development, focused on making
-            simple and interactive website with HTML, CSS and JavaScript.
+            Hi, I am a beginner in frontend development, focused on making
+            simple and interactive websites with HTML, CSS, and JavaScript.
           </p>
           <p>
-            I enjoy problem solving, although i'm not the best at it, i will always try to thrive to be better, i'm also trying my best with CSS design, i'm still not that good but i will always try to practice and learn more about the tricks and tips to make a good design that will attract users.
+            I enjoy problem-solving, although I'm not the best at it, I will
+            always try to thrive to be better. I'm also trying my best with CSS
+            design; I'm still not that good, but I will always try to practice
+            and learn more about the tricks and tips to make a good design that
+            will attract users.
           </p>
           <p>
-            I am also a fast learner in many things in life, but in programming, it's not as easy as i expected, programming have been pushing and punching me back a lot, it doesn't let me win easily, but i know that won't stop me to be a better developer.
+            I am also a fast learner in many things in life, but in programming,
+            it's not as easy as I expected. Programming has been pushing and
+            punching me back a lot; it doesn't let me win easily, but I know
+            that won't stop me from being a better developer.
           </p>
           <p>
-            i'm open to job opportunities, if you have any job opportunities that you think i would be a good fit for, feel free to contact me!
+            I'm open to job opportunities where I can contribute and grow my
+            skills. If you have any job opportunities that you think I would be
+            a good fit for, feel free to contact me!
           </p>
           <a
             href="#contact"
@@ -131,19 +135,57 @@
           </a>
         </div>
 
-        <!--Skills-->
-        <div class="md:w-1/2 mt-10 md:mt-0">
-          <h2 class="text-2xl font-bold mb-4">My Skills</h2>
-          <div class="flex flex-wrap gap-3">
-            <span class="bg-gray-200 px-4 py-2 rounded">HTML</span>
-            <span class="bg-gray-200 px-4 py-2 rounded">CSS</span>
-            <span class="bg-gray-200 px-4 py-2 rounded">JavaScript</span>
-            <span class="bg-gray-200 px-4 py-2 rounded">Tailwind</span>
-            <span class="bg-gray-200 px-4 py-2 rounded">BootStrap</span>
-            <span class="bg-gray-200 px-4 py-2 rounded">Git</span>
-            <span class="bg-gray-200 px-4 py-2 rounded">GitHub</span>
-            <span class="bg-gray-200 px-4 py-2 rounded">Responsive Design</span>
-            <span class="bg-gray-200 px-4 py-2 rounded">Terminal</span>
+        <!-- Skills -->
+        <div class="md:w-1/2">
+          <div class="mt-10 md:mt-0">
+            <h2 class="text-2xl font-bold mb-4">My Skills</h2>
+            <div class="flex flex-wrap gap-3">
+              <span class="bg-gray-200 px-4 py-2 rounded">HTML</span>
+              <span class="bg-gray-200 px-4 py-2 rounded">CSS</span>
+              <span class="bg-gray-200 px-4 py-2 rounded">JavaScript</span>
+              <span class="bg-gray-200 px-4 py-2 rounded">Tailwind</span>
+              <span class="bg-gray-200 px-4 py-2 rounded">BootStrap</span>
+              <span class="bg-gray-200 px-4 py-2 rounded">Git</span>
+              <span class="bg-gray-200 px-4 py-2 rounded">GitHub</span>
+              <span class="bg-gray-200 px-4 py-2 rounded"
+                >Responsive Design</span
+              >
+              <span class="bg-gray-200 px-4 py-2 rounded">Terminal</span>
+            </div>
+          </div>
+
+          <!-- Experience -->
+          <div class="mt-10">
+            <h2 class="text-2xl font-bold mb-4">Experience and statistics</h2>
+            <div class="flex flex-wrap gap-3">
+              <a
+                class="block max-w-sm p-4 bg-white border border-gray-200 rounded-lg shadow-sm hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
+              >
+                <h5
+                  class="mb-2 text-2xl font-bold tracking-tighter text-gray-900 dark:text-white"
+                >
+                  3 Years of Experience
+                </h5>
+                <p class="font-normal text-gray-700 dark:text-gray-400">
+                  I have 3 years of experience in a programming school focusing
+                  on Web development.
+                </p>
+              </a>
+
+              <a
+                class="block max-w-sm p-4 bg-white border border-gray-200 rounded-lg shadow-sm hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
+              >
+                <h5
+                  class="mb-2 text-2xl font-bold tracking-tighter text-gray-900 dark:text-white"
+                >
+                  3 Projects Completed
+                </h5>
+                <p class="font-normal text-gray-700 dark:text-gray-400">
+                  I have completed 3 projects during my programming school
+                  focusing on Web development, which will be showcased below.
+                </p>
+              </a>
+            </div>
           </div>
         </div>
       </div>
