--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
       </div>
 
-      <!-- mobile menu -->
+      <!-- mobile menu looks-->
       <div id="mobile-menu" class="md:hidden hidden px-4 pb-4">
         <a href="#" class="block py-2 text-gray-700 hover:text-blue-500"
           >Home</a
