--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               >Rajit Abdillah</a
             >
           </div>
-          <div class="hidden md:flex space-x-4 items-center">
+          <div class="hidden md:flex space-x-3.5 items-center">
             <a href="#home" class="text-gray-700 hover:text-blue-500">Home</a>
             <a href="#about" class="text-gray-700 hover:text-blue-500">About</a>
             <a href="#" class="text-gray-700 hover:text-blue-500">Projects</a>
@@ -48,8 +48,13 @@
       </div>
 
       <!-- mobile menu looks-->
-      <div id="mobile-menu" class="md:hidden hidden px-4 pb-4">
-        <a href="#" class="block py-2 text-gray-700 hover:text-blue-500"
+      <div
+        id="mobile-menu"
+        class="md:hidden hidden px-4 pb-4 fixed w-full bg-white shadow-md top-16 left-0 z-50"
+      >
+        <a
+          href="index.html"
+          class="block py-2 text-gray-700 hover:text-blue-500"
           >Home</a
         >
         <a href="#" class="block py-2 text-gray-700 hover:text-blue-500"
@@ -67,7 +72,7 @@
     <section id="home">
       <div
         class="bg-violet-600 flex items-center justify-center text-white text-center"
-        style="min-height: calc(117vh - 4rem)"
+        style="min-height: calc(100vh - 64px);"
       >
         <div
           class="container flex flex-col items-center px-4 py-16 pb-24 mx-auto text-center lg:pb-56 md:py-32 md:px-10 lg:px-32 dark:text-gray-50"
